--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>myFlix</title>
-  </head>
-  <body>
-    <div class="app-container"></div>
-    <script type="module" src="index.jsx"></script>
-  </body>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8" />
+  <title>My Parcel App</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="index.js"></script>
+</body>
+
 </html>
